add fishing village

--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
 
         <main>
             <div class="grid-container">
+                <div class="fishing-village-container">
+                    <img src="assets/habitats/fishing-village.png" alt="Fishing Village" class="fishing-village-image">
+                </div>
                 <div id="grid"></div>
-            <div class="selection-info">
-                <span id="selection-counter">Selected: 0/10 sites</span>
-            </div>
+                <div class="selection-info">
+                    <span id="selection-counter">Selected: 0/10 sites</span>
+                </div>
             </div>
 
             <div class="legend">
@@ -35,10 +38,6 @@
                 <div class="legend-item">
                     <div class="legend-color selected"></div>
                     <span>Selected site</span>
-                </div>
-                <div class="legend-item">
-                    <div class="legend-arrow"></div>
-                    <span>Fishing pressure gradient</span>
                 </div>
             </div>
 
