minor appearence changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="top-controls">
                 <div class="site-count-control">
                     <label for="site-count">Number of survey sites:</label>
-                    <input type="number" id="site-count" min="1" max="25" value="5">
+                    <input type="number" id="site-count" min="2" max="36" value="6">
                 </div>
                 <button id="new-scenario-btn">New Scenario</button>
             </div>
@@ -44,15 +44,15 @@
             <div class="results-panel" id="results-panel">
                 <h2>Impact Evaluation Results</h2>
                 <div class="result-item">
-                    <span class="result-label">Survey-based impact:</span>
+                    <span class="result-label">Estimate of the impact of the MPA from your surveys (%):</span>
                     <span class="result-value" id="survey-impact">-</span>
                 </div>
                 <div class="result-item">
-                    <span class="result-label">True impact:</span>
+                    <span class="result-label">What the true impact of the MPA is (%):</span>
                     <span class="result-value" id="true-impact">-</span>
                 </div>
                 <div class="result-item">
-                    <span class="result-label">Difference:</span>
+                    <span class="result-label">Difference between your estimate and the true impact (%):</span>
                     <span class="result-value" id="impact-difference">-</span>
                 </div>
             </div>
